changed activUser to activeUser

--- a/legalNotice.html
+++ b/legalNotice.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActivUser(), userCircle(), hideSidebarLinks()">
+<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), userCircle(), hideSidebarLinks()">
     <header>
         <div id="sidebarArea"></div>
         <div id="headerArea"></div>
