--- a/help.html
+++ b/help.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 
-<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActivUser(), userCircle()">
+<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), userCircle()">
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
 
