--- a/privacy-police.html
+++ b/privacy-police.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActivUser(), userCircle(), hideSidebarLinks()">
+<body onclick="hideMenuHeader()" onload="renderSidebarHeader(), loadActiveUser(), userCircle(), hideSidebarLinks()">
     <div id="sidebarArea"></div>
     <div id="headerArea"></div>
     <div id="menu-header-container" class="menu-header-container d-none">
