changed sing up to sign up

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="logo-container">
             <img src="./img/join-logo.svg" alt="">
         </div>
-        <div id="sing-up">
+        <div id="sign-up">
             <span class="fontSize20">Not a Join user?</span>
             <button onclick="loadRegister()" type="button" class="signInBtn fontSize16"><b>Sign up</b></button>
         </div>
@@ -43,7 +43,7 @@
 
         </div>
     </div>
-    <div class="sing-up-mobile">
+    <div class="sign-up-mobile">
         <span>Not a Join user?</span>
         <button onclick="loadRegister()" type="button" class="signInBtn fontSize21">Sign up</button>
     </div>
