changed ids of login input container

--- a/register.html
+++ b/register.html
@@ -37,13 +37,13 @@
                 </div>
 
                 <form onsubmit="registUser(); return false;" action="" class="fontSize20 form">
-                    <div class="input-field" id="containerUserName">
-                        <input required type="text" minlength="4" placeholder="Name" id="userName">
+                    <div class="input-field" id="register_name_container">
+                        <input required type="text" minlength="4" placeholder="Name" id="register_name">
                         <img src="./img/user.svg" alt="Bild user" class="input-suffix">
                     </div>
 
-                    <div class="input-field" id="inputEmail">
-                        <input required type="email" minlength="4" placeholder="Email" id="email">
+                    <div class="input-field" id="register_email_container">
+                        <input required type="email" minlength="4" placeholder="Email" id="register_email">
                         <img src="./img/letter.svg" alt="Bild letter" class="input-suffix">
                     </div>
                     <div class="warning-field">
