changed whole input and password ids

--- a/register.html
+++ b/register.html
@@ -52,8 +52,8 @@
                         </span>
                     </div>
 
-                    <div class="input-field" id="inputPassword">
-                        <input required type="password" minlength="4" placeholder="Password" id="password">
+                    <div class="input-field" id="register_password_container">
+                        <input required type="password" minlength="4" placeholder="Password" id="register_password">
                         <img src="./img/lock.svg" alt="Bild lock" class="input-suffix">
                     </div>
                     <div class="warning-field">
@@ -62,9 +62,9 @@
                         </span>
                     </div>
 
-                    <div class="input-field" id="inputConfirmPassword">
+                    <div class="input-field" id="register_password_confirm_container">
                         <input required type="password" minlength="4" placeholder="Confirm Password"
-                            id="confirmPassword">
+                            id="register_password_confirm">
                         <img src="./img/lock.svg" alt="Bild lock" class="input-suffix">
                     </div>
                     <div class="warning-field">
