input registration changed

--- a/register.html
+++ b/register.html
@@ -36,36 +36,36 @@
                 </div>
 
                 <form onsubmit="registUser(); return false;" action="" class="fontSize20 form">
-                    <div class="input-field" id="register_name_container">
+                    <!-- <div class="input-field" id="register_name_container"> -->
                         <input required type="text" minlength="4" placeholder="Name" id="register_name">
-                        <img src="./img/user.svg" alt="Bild user" class="input-suffix">
-                    </div>
+                        <!-- <img src="./img/user.svg" alt="Bild user" class="input-suffix"> -->
+                    <!-- </div> -->
 
-                    <div class="input-field" id="register_email_container">
+                    <!-- <div class="input-field" id="register_email_container"> -->
                         <input required type="email" minlength="4" placeholder="Email" id="register_email">
-                        <img src="./img/letter.svg" alt="Bild letter" class="input-suffix">
-                    </div>
+                        <!-- <img src="./img/letter.svg" alt="Bild letter" class="input-suffix"> -->
+                    <!-- </div> -->
                     <div class="warning-field">
                         <span id="warning-email" class="d-none">
                             This email address already exists.
                         </span>
                     </div>
 
-                    <div class="input-field" id="register_password_container">
+                    <!-- <div class="input-field" id="register_password_container"> -->
                         <input required type="password" minlength="4" placeholder="Password" id="register_password">
-                        <img src="./img/lock.svg" alt="Bild lock" class="input-suffix">
-                    </div>
+                        <!-- <img src="./img/lock.svg" alt="Bild lock" class="input-suffix"> -->
+                    <!-- </div> -->
                     <div class="warning-field">
                         <span id="warning-password" class="d-none">
                             Password do not Match.
                         </span>
                     </div>
 
-                    <div class="input-field" id="register_password_confirm_container">
+                    <!-- <div class="input-field" id="register_password_confirm_container"> -->
                         <input required type="password" minlength="4" placeholder="Confirm Password"
                             id="register_password_confirm">
-                        <img src="./img/lock.svg" alt="Bild lock" class="input-suffix">
-                    </div>
+                        <!-- <img src="./img/lock.svg" alt="Bild lock" class="input-suffix"> -->
+                    <!-- </div> -->
                     <div class="warning-field">
                         <span id="warning-confirmPassword" class="d-none">
                             Password do not Match.
