register css change without renaming

--- a/register.html
+++ b/register.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="checkboxSignUp fontSize16">
-                        <input type="checkbox" name="myCheckbox" id="myCheckbox" value="yes" required>
+                        <input type="checkbox" name="myCheckbox" id="register_checkbox" value="yes" required>
                         <label for="myCheckbox">I accept the</label>
                         <a onclick="" href="./privacy-police.html">Privacy policy</a>
                     </div>
