back arrow mobile hide sign up

--- a/register.html
+++ b/register.html
@@ -26,11 +26,11 @@
         </header>
 
         <div class="section">
-            <div id="dialog" class="dialogSignUp">
+            <div id="dialog" class="dialog-sign-up">
                 <a href="index.html" id="mobileBackArrowId">
                     <img src="img/arror-left.svg" alt="">
                 </a>
-                <div class="signUpUnderlineContainer">
+                <div class="sign-up-underline-container">
                     <span class="fontSize61"><b>Sign up</b></span>
                     <div class="underline"></div>
                 </div>
