register css namechanges

--- a/contacts.html
+++ b/contacts.html
@@ -199,7 +199,7 @@
                     <div id="deleteMobileButtonId">
                     </div>
                 </div>
-                <div class="pointer d-none" id="mobileBackArrowId" onclick="closePopupMobile()">
+                <div class="pointer d-none" id="mobile_backarrow_id" onclick="closePopupMobile()">
                     <img src="./img/arror-left.svg">
                 </div>
             </section>
