--- a/help.html
+++ b/help.html
@@ -168,7 +168,7 @@
             <b>Enjoy using Join!</b>
         </span>
 
-        <div class="pointer" id="mobileBackArrowId" onclick="goBack()">
+        <div class="pointer" id="mobile_backarrow_id" onclick="goBack()">
             <img src="./img/arror-left.svg">
         </div>
     </div>
