--- a/privacy-police.html
+++ b/privacy-police.html
@@ -78,7 +78,7 @@
                 </span>
         </div>
 
-        <div class="pointer" id="mobileBackArrowId" onclick="goBack()">
+        <div class="pointer" id="mobile_backarrow_id" onclick="goBack()">
             <img src="./img/arror-left.svg">
         </div>
     </div>
