--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
 
         <div class="section">
             <div id="dialog" class="dialog-sign-up">
-                <a href="index.html" id="mobileBackArrowId">
+                <a href="index.html" id="mobile_backarrow_id">
                     <img src="img/arror-left.svg" alt="">
                 </a>
                 <div class="sign-up-underline-container">
@@ -72,13 +72,13 @@
                         </span>
                     </div>
 
-                    <div class="checkboxSignUp fontSize16">
+                    <div class="register-checkbox-container fontSize16">
                         <input type="checkbox" name="myCheckbox" id="register_checkbox" value="yes" required>
                         <label for="myCheckbox">I accept the</label>
                         <a onclick="" href="./privacy-police.html">Privacy policy</a>
                     </div>
                     <div class="button-div">
-                        <button type="submit" type="button" id="registerBtn" class="signUpBtnRegister">Sign
+                        <button type="submit" type="button" id="registerBtn" class="sign-up-btn-register">Sign
                             up</button>
                     </div>
                 </form>
