--- a/legalNotice.html
+++ b/legalNotice.html
@@ -121,7 +121,7 @@
             Join.
         </span>
 
-        <div class="pointer" id="mobileBackArrowId" onclick="goBack()">
+        <div class="pointer" id="mobile_backarrow_id" onclick="goBack()">
             <img src="./img/arror-left.svg">
         </div>
     </div>
