--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div id="sign-up">
             <span class="fontSize20">Not a Join user?</span>
-            <button onclick="loadRegister()" type="button" class="signInBtn fontSize16"><b>Sign up</b></button>
+            <button onclick="loadRegister()" type="button" class="btn blue-btn fontSize16"><b>Sign up</b></button>
         </div>
     </header>
 
