join login width changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <div class="section">
-        <div id="dialog" class="dialog">
+        <div id="dialog" class="dialog-login">
 
         </div>
     </div>
