changed privacy policy link color

--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
                     <div class="width-100P">
                         <div class="checkboxRememberMeContainer fontSize16">
                             <input type="checkbox" name="myCheckbox" id="register_checkbox" value="yes" required>
-                            <label for="myCheckbox">I accept the </label>
+                            <label for="myCheckbox">I accept the</label><br>
                             <a onclick="" href="./privacy-police.html">Privacy policy</a>
                         </div>
                     </div>
