renamed contacts-container to contats-list

--- a/contacts.html
+++ b/contacts.html
@@ -39,7 +39,7 @@
     <div class="contentContact">
 
         <div class="d-flex contactPage">
-            <section class="contacts-container">
+            <section class="contacts-list">
                 <div class="btnBackground horicontalAndVertical" id="btnBackgroundId">
                     <button type="button" class="addNewContactButton horicontalAndVertical fontSize21"
                         onclick="addContact(), slide('swipeContactPopupId', 'addContactId')">
