--- a/contacts.html
+++ b/contacts.html
@@ -48,7 +48,7 @@
                     </button>
                 </div>
                 <div class="scrollingContainer">
-                    <div id="contactsId">
+                    <div id="contact_list">
                     </div>
                 </div>
             </section>
@@ -56,7 +56,7 @@
             <section class="addContactBackground horicontalAndVertical d-none" id="contact_popup_section"
                 onclick="slideOut('contact_popup', 'contact_popup_section', 200)">
                 <div class="addContactPopup d-flex" onclick="doNotClose(event)" id="contact_popup">
-                    <div class="leftSideAddContactPopup horicontal">
+                    <div class="leftSideAddContactPopup">
                         <!-- <img src="./img/join.logo-white.svg" id="joinLogoAddContactId"> -->
                         <div class="addContactLeftText">
                             <spline class="fontSize61"><b id="textChangeToEditContactId">Add contact</b></spline>
@@ -132,7 +132,7 @@
             </section>
 
             <section id="right-container">
-                <div class=" contactsTitle horicontal" id="contactsTitleId">
+                <div class="contactsTitle" id="contactsTitleId">
                     <div class="fontSize61"><b>Contacts</b></div>
                     <div id="blueLineIdDesktopViewId">
                         <svg class="mobileDelete" xmlns="http://www.w3.org/2000/svg" width="3" height="59"
@@ -152,18 +152,18 @@
 
                 <div class="contactInfoBig column d-none" id="contact_details">
                     <!-- Big Picture / Name / Edit and Delete -->
-                    <div class="profilePicAndNameBig horicontal">
+                    <div class="profilePicAndNameBig">
                         <div id="detail_profile_picture">
                         </div>
                         <div>
                             <div id="nameId" class="fontSize47">
                             </div>
-                            <div class="d-flex gap16 horicontal fontSize16" id="deleteEditId">
+                            <div class="d-flex gap16 fontSize16" id="deleteEditId">
                             </div>
                         </div>
                     </div>
                     <!-- Middle Text -->
-                    <spline class="contactInfoTextBlock horicontal fontSize20">
+                    <spline class="contactInfoTextBlock fontSize20">
                         Contact Information
                     </spline>
                     <!-- Rest -->
