profile picture in edit contact now shown

--- a/contacts.html
+++ b/contacts.html
@@ -65,8 +65,9 @@
                             </div>
                         </div>
                     </div>
-                    <div id="img_container">
-                        <div class="no-profile-img" id="">
+                    <div class="center-popup">
+                        <div id="profile_img"></div>
+                        <div id="no_profile_img">
                             <img class="circle" src="./img/Group 9.svg">
                             <img class="personInCircle" src="./img/person.svg">
                         </div>
