contact list responsive fixes

--- a/contacts.html
+++ b/contacts.html
@@ -152,7 +152,7 @@
                         <div id="detail_profile_picture">
                         </div>
                         <div>
-                            <div id="nameId" class="fontSize47">
+                            <div id="nameId">
                             </div>
                             <div class="d-flex gap16 fontSize16" id="deleteEditId">
                             </div>
