--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
                     </div>
                    
                     <div class="button-div">
-                        <button type="submit" type="button" id="registerBtn" class="btn blue-btn">Sign
+                        <button type="submit" type="button" id="registerBtn" class="button blue-btn">Sign
                             up</button>
                     </div>
                 </form>
